client/stylesheets/home.css
.home h1 {
  font-family: 'Furore', sans-serif;
}

.home .instructions-flexbox {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: 35px 0;
  padding: 15px 25px;
  color: var(--instruction-text-primary);
  border: 3px solid var(--border-primary);
  background-color: var(--instruction-background);
}

.home .instruction {
  flex-shrink: 1;
  flex-grow: 1;
}

.home .upload-grid {
  display: grid;
  grid-row-gap: 35px;
  grid-template-rows: auto auto auto;
  grid-template-columns: 50% 50%;
  grid-template-areas:
    "files password"
    "upload upload"
    "loading loading";
}

.upload-loading {
  grid-area: loading;
  place-self: center;
}

.upload-loading .loading {
  border: 3px solid var(--title-primary);
  background: linear-gradient(to bottom, var(--file-background-primary) 50%, var(--file-background-secondary));
  padding: 12px 12px 4px 12px;
}

.file-select-container {
  grid-area: files;
  display: flex;
  border: none;
  margin: 0 50px;
  padding: 10px;
  height: 60px;
  width: auto;
  border-radius: 0;
  background-color: var(--input-background);
  color: var(--instruction-text-primary);
  border: 3px solid var(--button-border);
}

.upload-instructions {
  font-size: .9rem;
  align-self: center;
}

.upload-instructions li:last-child {
  margin-top: 15px;
}

.asterisk {
  color: var(--error-border);
}

#files {
  font-size: 1.25rem;
  cursor: pointer;
  border: none;
  height: 60px;
  flex-grow: 2;
}

#passEncrypt {
  grid-area: password;
  font-size: 1.5rem;
}

#passEncrypt {
  border: none;
  margin: 0 50px;
  padding: 10px;
  height: 60px;
  width: auto;
  border-radius: 0;
  background-color: var(--input-background);
  color: var(--instruction-text-primary);
  border: 3px solid var(--button-border);
}

.home button {
  grid-area: upload;
  justify-self: center;
  font-size: 1.5rem;
  width: 25%;
  height: 65px;
}

.home button:disabled {
  cursor: progress;
}

